--- a/index.ipynb
+++ b/index.ipynb
@@ -182,12 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "mexico = None\n",
-    "mexico = countries[]"
+    "mexico = countries[3]"
    ]
   },
   {
