--- a/index.ipynb
+++ b/index.ipynb
@@ -182,12 +182,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mexico'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mexico = None\n",
-    "mexico = countries[3]"
+    "mexico = countries[3]\n",
+    "mexico "
    ]
   },
   {
