--- a/index.ipynb
+++ b/index.ipynb
@@ -261,11 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Tha') # add code here"
+    "countries.append('Thailand') # add code here"
    ]
   },
   {
