--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[6] # add code here"
+    "countries[6] = 'USA' # add code here"
    ]
   },
   {
