--- a/index.ipynb
+++ b/index.ipynb
@@ -419,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
