Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,25 +424,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Argentina',\n",
+       "['Croatia',\n",
        " 'Canada',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Italy',\n",
-       " 'Malta',\n",
-       " 'Mexico',\n",
        " 'Morocco',\n",
+       " 'Finland',\n",
+       " 'Mexico',\n",
+       " 'Malta',\n",
        " 'South Korea',\n",
-       " 'USA'}"
+       " 'Italy',\n",
+       " 'USA',\n",
+       " 'Argentina']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
